packages/kotlin/ttrp-frontend/src/test/resources/corpus/ttr-pandas/reject/TTRP-PD-007.ttrp
// expect: TTRP-PD-007
container c target polars """pandas
pl.col(amount)
"""
